# NumMethPhy

./: CMakeLists.txt
main/: balle.cpp  netwn.cpp  orbit.cpp  pendul.cpp
src/: Ball.cpp  Ball.h  Comet.cpp  Comet.h  Matrix.cpp  Matrix.h  NumMethPhy.i  Pendulum.cpp  Pendulum.h  fnewt.cpp  ge.cpp
